# FLLME

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pypi.yml  release.yml  tests.yml
fllm/: generate.py  http.py
fllm/auth/: protocol.py
fllm/models/output/: citation.py  usage.py
fllm/providers/: base.py
fllm/providers/openai/: azure_v1.py
fllm/store/deployments/: protocol.py  sqlite.py
fllme/: errors.py  generate.py  media.py  service.py
fllme/models/: message.py
fllme/models/input/: __init__.py  image.py
fllme/models/output/: __init__.py  safety.py
fllme/providers/anthropic/: vertex_v2.py
fllme/providers/gemini/: __init__.py
fllme/providers/mistral/: __init__.py
func_llm/: __init__.py  errors.py  generate.py  media.py  service.py
func_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
func_llm/auth/: __init__.py  api_key.py  google_adc.py
func_llm/models/: __init__.py  auth.py  deployment.py  model.py
func_llm/models/IO/: message.py
func_llm/models/input/: main.py  tools.py
func_llm/models/output/: main.py  stream.py
func_llm/providers/: __init__.py  base.py
func_llm/providers/anthropic/: vertex_v1.py
func_llm/providers/gemini/: vertex_v1.py
func_llm/providers/mistral/: vertex_v1.py
func_llm/providers/openai/: __init__.py  azure_v1.py
func_llm/store/: __init__.py
func_llm/store/deployments/: __init__.py  protocol.py  sqlite.py
tests/: test_auth.py  test_gemini_adapter.py  test_generate.py  test_models.py  test_openai_adapter.py  test_service.py  test_store_sqlite.py
(+5 files in other folders)
