[project]
name = "fllme"
version = "0.1.1"
description = "A functionnal oriented Python CLI for LLM calling with multi provider and multi model"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Romain BLANCHARD", email = "romain.blanchard.math@gmail.com"},
]

dependencies = [
    "aiosqlite>=0.20.0",
    "google-auth>=2.55.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fllme",
    "google>=3.0.0",
    "marimo>=0.23.13",
    "mypy>=1.15",
    "nest-asyncio>=1.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11",
]

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
func-llm = { workspace = true }

